Fix Whitespace Issues (Tabs to Spaces) :neckbeard:

--- a/_sass/includes/_footer.scss
+++ b/_sass/includes/_footer.scss
@@ -168,7 +168,7 @@
       color: darken(#6D8299, 1%);
     }
     &.circle {
-      @include calc(vertical-align, '35%');
+      @include calc(vertical-align, 35%);
       color: lighten($basecolor, 1%);
       font-size: .5em;
       margin: 0 4px;
